[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stylebook-data"
version = "0.1"
license = { text = "Apache-2.0" }
description = "Permissive linter extensions for markup and data languages"
readme = "../README.md"
authors = [{ name = "Hendra Anggrian", email = "hanggrian@proton.me" }]
keywords = ["lint rules", "lint checkers"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "sqlfluff==4.1.0",
  "taplo==0.9.3",
  "yamllint==1.38.0",
]

[project.scripts]
stylebook-data = "stylebook_data.cli:run"

[project.urls]
"Source Code" = "https://github.com/hanggrian/stylebook"
"Bug Tracker" = "https://github.com/hanggrian/stylebook/issues"

[tool.hatch.build.targets.wheel]
packages = ["stylebook_data"]

[tool.hatch.build.targets.sdist]
include = ["stylebook_data/resources"]
