[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stylebook"
version = "0.2.0"
description = "Comprehensive linter aggregator for data and tooling formats"
keywords = [
  "sql",
  "toml",
  "yaml",
  "lint",
  "linter",
]
authors = [{ name = "Hendra Anggrian", email = "hanggrian@proton.me" }]
license = { text = "Apache-2.0" }
readme = "../README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  # main
  "colorama",
  "ansible-lint==26.4.0",
  "asciidoc-linter @ git+https://github.com/docToolchain/asciidoc-linter.git",
  "Blinter==1.0.112",
  "dotenv-linter==0.7.0",
  "pyinilint==0.17",
  "restructuredtext_lint==2.0.2",
  "sqlfluff==4.2.1",
  "taplo==0.9.3",
  "yamllint==1.38.0",
  "PyYAML==6.0.3",
]

[project.urls]
"Source Code" = "https://github.com/hanggrian/stylebook"
"Bug Tracker" = "https://github.com/hanggrian/stylebook/issues"

[project.scripts]
stylebook = "stylebook.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["stylebook"]

[tool.hatch.build.targets.sdist]
include = ["stylebook/"]
