[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stylebook"
version = "0.3.0"
description = "Comprehensive linter aggregator for data and tooling formats"
keywords = [
  "sql",
  "toml",
  "yaml",
  "lint",
  "linter",
]
authors = [{ name = "Hendra Anggrian", email = "hanggrian@proton.me" }]
license = { text = "Apache-2.0" }
readme = "../README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  # main
  "colorama",
  "PyYAML==6.0.3"
]

[project.optional-dependencies]
ansible-lint = ["ansible-lint==26.4.0"]
asciidoc-linter = ["asciidoc-linter @ git+https://github.com/docToolchain/asciidoc-linter.git"]
blinter = ["Blinter==1.0.112"]
cfn-lint = ["cfn-lint==1.51.4"]
dotenv-linter = ["dotenv-linter==0.7.0"]
pyinilint = ["pyinilint==0.17"]
restructuredtext-lint = ["restructuredtext_lint==2.0.2"]
sqlfluff = ["sqlfluff==4.2.2"]
taplo = ["taplo==0.9.3"]
yamllint = ["yamllint==1.38.0"]

[project.urls]
"Source Code" = "https://github.com/hanggrian/stylebook"
"Bug Tracker" = "https://github.com/hanggrian/stylebook/issues"

[project.scripts]
stylebook = "stylebook.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["stylebook"]

[tool.hatch.build.targets.sdist]
include = ["stylebook/"]
